fixed mobile overflow

--- a/style.sass
+++ b/style.sass
@@ -1,6 +1,9 @@
 *
     box-sizing: border-box
 
+.envelope
+    overflow-x: hidden
+
 body
     margin: 0
     max-width: 1000px
@@ -11,9 +14,9 @@ body
     -webkit-user-select: none
     -ms-user-select: none
     user-select: none
-    overflow-x: hidden
+    font-family: Arial, Helvetica, sans-serif
 
-.aboutme
+.header
     width: 100%
 
 .addbutton
@@ -95,3 +98,7 @@ body
     bottom: 0
     right: 0
     overflow: hidden
+
+.padded
+    padding-left: 25px
+    padding-right: 25px
